K8s/ingress_resource.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /getAllStats
        pathType: Prefix
        backend:
          serviceName: trendcalc-zuul-service
          servicePort: 3333
      - backend:
          serviceName: trendcalc-zuul-service
          servicePort: 3333
        path: /getSafe
      - backend:
          serviceName: trendcalc-zuul-service
          servicePort: 3333
        path: /getWarn
      - backend:
          serviceName: trendcalc-zuul-service
          servicePort: 3333
        path: /getTourist/
      - backend:
          serviceName: trendcalc-ui-service
          servicePort: 4200
        path: /home
      - backend:
          serviceName: trendcalc-ui-service
          servicePort: 4200
        path: /
